<?xml version="1.0"?>
<package format="2">
  <name>mavros_rover_plugins</name>
  <version>1.0.0</version>
  <description>
    Estimator interface plugins for <a href="http://wiki.ros.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="kabir@uasys.io">Mohammed Kabir</maintainer>
  <author email="kabir@uasys.io">Mohammed Kabir</author>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>mavros</depend>
  <depend>roscpp</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
  </export>
</package>
